<resources>
    <string name="app_name">Fall Detection</string>
    <string name="app_name_upper_case">PHÁT HIỆN TÉ NGÃ</string>
    <string name="desc_login_image">Login Image</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="txt_forget_password_ask">Quên mật khẩu?</string>
    <string name="txt_sign_in">Đăng nhập</string>
    <string name="txt_sign_up">Đăng ký</string>
    <string name="txt_dont_have_an_account">Chưa có tài khoản?</string>
    <string name="txt_have_an_account">Đã có tài khoản?</string>
    <string name="txt_sign_up_here">Đăng ký tại đây</string>
    <string name="txt_sign_in_here">Đăng nhập tại đây</string>
    <string name="txt_confirm_password">Xác nhận mật khẩu</string>
    <string name="txt_dangerous">KHẨN CẤP</string>
    <string name="txt_someone_has_fallen">Phát hiện có té ngã</string>
    <string name="txt_cancel_alert">Tắt thông báo</string>
    <string name="txt_view_detail">Xem thông tin chi tiết</string>
    <string name="txt_alert_address">Địa chỉ: </string>
    <string name="txt_confirm_email">Xác nhận email</string>
    <string name="txt_enter_email">Nhập email</string>
    <string name="txt_forget_password">Quên mật khẩu</string>
    <string name="txt_turn_back">Quay lại</string>
    <string name="txt_confirm_verification_code">Xác nhận mã xác thực</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_detail">Lịch sử quan sát</string>
    <string name="title_register">Theo dõi</string>
    <string name="title_setting">Cài đặt</string>
    <string name="title_profile">Tài khoản</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="title_item_sort">Sắp xếp</string>
    <string name="action_item_profile">Tài khoản</string>
    <string name="msg_fragment_detail">Fragment Detail</string>
    <string name="txt_profile_full_name">Họ tên: Nguyễn Văn A</string>
    <string name="txt_profile_email">Email:</string>
    <string name="txt_profile_birth_date">Ngày sinh: 01/01/2003</string>
    <string name="txt_profile_phone">Số điện thoại: 0853331369</string>
    <string name="txt_profile_gender">Giới tính: Nam</string>
    <string name="des_avatar">Avatar image</string>
    <string name="des_btn_more">more dsc</string>
    <string name="txt_user_age">Tuổi: %d</string>
    <string name="txt_user_full_name">Người theo dõi: %s</string>
    <string name="label_new_registration">Đăng ký theo dõi</string>
    <string name="label_pick_your_avatar">Chọn ảnh đại diện</string>
    <string name="action_add">Đăng ký</string>
    <string name="action_clear">Hủy</string>
    <string name="hint_enter_reminder_name">Nhập tên gợi nhớ</string>
    <string name="hint_enter_remenber_birth_date">Nhập ngày sinh</string>
    <string name="hint_enter_device_code">Nhập mã máy</string>
    <string name="des_avatar_image_picker">Des avatar image picker</string>
    <string name="action_update">Cập nhật</string>
    <string name="item_text_notifications">Thông báo</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="des_ba_icon">Des ba icon</string>
    <string name="asset_statements">statement</string>
    <string name="txt_check_your_email">Vui lòng xác thực thông qua tin nhắn đến email của bạn!</string>
    <string name="txt_check_your_email_forget_pass">Vui lòng kiểm tra tin nhắn đến email của bạn để đổi mật khẩu!</string>
    <string name="txt_check_your_email_signup">Đăng ký thành công. Vui lòng kiểm tra tin nhắn đến email của bạn!</string>
    <string name="txt_wrong_username_password">Tài khoản hoặc mật khẩu không chính xác!</string>
    <string name="txt_no_internet">Vui lòng kết nối internet!</string>
    <string name="txt_error_email_blank">Email không được để trống</string>
    <string name="txt_error_name_blank">Họ tên không được để trống</string>
    <string name="txt_date_error">Ngày tháng không đúng định dạng</string>
    <string name="txt_error_phone_number_error">Số điện thoại không đúng định dạng</string>
    <string name="txt_error_email_invalid">Email không đúng định dạng!</string>
    <string name="txt_error_password_format">Mật khẩu phải có ít nhất 8 ký tự, gồm ít nhất 1 chữ cái và 1 chữ số!</string>
    <string name="txt_require_enter_info">Vui lòng điền thông tin đầy đủ và đúng định dạng!</string>
    <string name="txt_error_password_blank">Mật khẩu không được để trống!</string>
    <string name="txt_error_blank">Vui lòng điền đầy đủ thông tin!</string>
    <string name="txt_confirm_pass_not_equal_pass">Mật khẩu xác nhận lại không trùng với mật khẩu!</string>
    <string name="txt_signup_failed">Có lỗi xảy ra. Đăng ký không thành công!</string>
    <string name="txt_cant_send_email">Có lỗi xảy ra. Không thể gửi email đến bạn!</string>
    <string name="txt_account_is_available">Email đăng ký đã tồn tại. Vui lòng đăng nhập!</string>
    <string name="txt_account_is_not_available">Tài khoản không tồn tại!</string>
    <string name="txt_unfollow">Hủy theo dõi</string>
    <string name="txt_watch_statistic">Xem thống kê</string>
    <string name="txt_man">Nam</string>
    <string name="txt_woman">Nữ</string>
    <string name="txt_time">Thời gian: 20/11/2003</string>
    <string name="disc_dangerous_image">dangerous image</string>
    <string name="txt_ong_noi">Ông nội</string>
    <string name="text_fall_history">LỊCH SỬ TÉ NGÃ</string>
    <string name="txt_full_name">Họ và tên:</string>
    <string name="text_birthday">Ngày sinh:</string>
    <string name="txt_full_name_example">Nguyễn Thị Trà My</string>
    <string name="text_birthday_example">19/11/2003</string>
    <string name="text_watch_detail">Chi tiết</string>
    <string name="txt_enter_phone_number">Nhập số điện thoại</string>
    <string name="txt_enter_full_name">Nhập họ tên</string>
    <string name="txt_save_info">Lưu thông tin</string>
    <string name="default_notification_channel_id">com.example.falldetection.DANGEROUS_NOTIFICATION</string>
    <string name="msg_permission_denied">Bạn không được phép nhận thông báo từ thiết bị này.</string>
    <string name="msg_permission_prompt">Bạn cần cấp phép thông báo để thông báo khẩn cấp (nếu có té ngã).</string>
    <string name="preference_account_key">com.example.falldetection.preferece_account</string>
    <string name="preference_email_key">com.example.falldetection.preferece_email</string>
    <string name="preference_display_name_key">com.example.falldetection.preferece_name</string>
    <string name="txt_unknown_error">Có lỗi xảy ra!</string>
    <string name="txt_email_example">tramynguyen19112003@gmail.com</string>
    <string name="txt_gender">Giới tính:</string>
    <string name="text_phone_number">Điện thoại:</string>
    <string name="txt_register_patient_success">Đăng ký thành công. Chờ admin phê duyệt!</string>
    <string name="txt_register_patient">Đăng ký mang thiết bị</string>
    <string name="txt_update_profile_success">Cập nhật thành công</string>
    <string name="txt_cancel_patient_success">Hủy mang thiết bị thành công</string>
    <string name="txt_cancel_bring_device">Hủy mang thuyết bị</string>
    <string name="hint_enter_device_email">Nhập email cần theo dõi</string>
    <string name="txt_error_reminder_name_blank">Tên gợi nhớ không được để trống</string>
    <string name="txt_register_observer_success">Đã gửi yêu cầu theo dõi!</string>
    <string name="txt_exist_connect">Bạn đã theo dõi người dùng này</string>
    <string name="title_notification">Thông báo</string>
    <string name="channel_dangerous_id">com.example.falldetection.dangerous-channel</string>
    <string name="txt_alert_time">Thời gian: </string>
    <string name="txt_alert_name">Người ngã: </string>
    <string name="txt_patient_cannot_be_current_user">Tài khoản của bạn và người được theo dõi không thể trùng nhau</string>
    <string name="txt_accept">Đồng ý</string>
    <string name="txt_deny">Từ chối</string>
    <string name="tilte_request">Yêu cầu theo dõi</string>
    <string name="txt_empty">Danh sách trống</string>
    <string name="camera_permission_denied">Bạn đã không cho phép ứng dụng truy cập vào thư viện.</string>
    <string name="gallery_denied">"Bạn được không cho phép ứng dụng truy cập vào thư viện. "</string>
    <string name="gallery_permission_prompt">Bạn cần cấp quyền truy cập vào thư viện cho ứng dụng.</string>
    <string name="txt_update_avatar_success">Cập nhật ảnh đại diện thành công.</string>
</resources>

