<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_register"
        android:icon="@drawable/ic_add_person"
        android:title="@string/title_register"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_drawer_update"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_update"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_drawer_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/item_text_notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_drawer_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom|withText" />
</menu>