<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_item_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/main_menu_item_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/title_item_sort"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/main_menu_item_profile"
        android:icon="@drawable/ic_logout"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom|withText" />
</menu>