<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_8"
    android:layout_marginEnd="@dimen/margin_8"
    app:cardCornerRadius="@dimen/card_cornner_radius_8"
    android:layout_marginTop="5dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_register_avt"
            android:layout_width="@dimen/card_size_60"
            android:layout_height="@dimen/card_size_60"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/disc_dangerous_image"
            tools:src="@tools:sample/avatars"
            android:src="@drawable/avatar_1"
            app:layout_constraintBottom_toBottomOf="@+id/text_request_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_observer_email" />

        <TextView
            android:id="@+id/text_observer_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/txt_full_name_example"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_register_avt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_request_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/txt_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/text_observer_email"
            app:layout_constraintStart_toStartOf="@+id/text_observer_email"
            app:layout_constraintTop_toBottomOf="@+id/text_observer_email" />

        <Button
            android:id="@+id/btn_request_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_marginBottom="5dp"
            android:text="@string/txt_accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_request_deny"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_register_avt"
            app:layout_constraintStart_toStartOf="@+id/text_observer_email"
            app:layout_constraintTop_toBottomOf="@+id/text_request_time"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_request_deny"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/txt_deny"
            app:layout_constraintBottom_toBottomOf="@+id/btn_request_accept"
            app:layout_constraintEnd_toEndOf="@+id/text_observer_email"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_request_accept"
            app:layout_constraintTop_toTopOf="@+id/btn_request_accept" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>