<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/card_size_150"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/txt_dangerous"
        android:src="@drawable/alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/txt_dangerous"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_xxl"
        app:layout_constraintEnd_toEndOf="@+id/gifImageView"
        app:layout_constraintStart_toStartOf="@+id/gifImageView"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

    <TextView
        android:id="@+id/text_alert_noti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_32"
        android:gravity="center"
        android:text="@string/txt_someone_has_fallen"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/label_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_64"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/txt_alert_name"
        android:textAppearance="@android:style/TextAppearance.Material.Notification.Emphasis"
        android:textSize="@dimen/text_size_xl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_alert_noti" />

    <TextView
        android:id="@+id/text_alert_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_24"
        android:gravity="center_horizontal"
        android:text="@string/txt_full_name_example"
        android:textSize="@dimen/text_size_xl"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_patient_name"
        app:layout_constraintTop_toTopOf="@+id/label_patient_name" />

    <TextView
        android:id="@+id/label_alert_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/txt_alert_time"
        android:textSize="@dimen/text_size_xl"
        android:textAppearance="@android:style/TextAppearance.Material.Notification.Emphasis"
        app:layout_constraintEnd_toEndOf="@+id/label_patient_name"
        app:layout_constraintStart_toStartOf="@+id/label_patient_name"
        app:layout_constraintTop_toBottomOf="@+id/text_alert_name" />

    <TextView
        android:id="@+id/text_alert_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_alert_time"
        android:textSize="@dimen/text_size_lg"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/text_alert_name"
        app:layout_constraintStart_toEndOf="@+id/label_patient_name"
        app:layout_constraintStart_toStartOf="@+id/text_alert_name"
        app:layout_constraintTop_toTopOf="@+id/label_alert_time" />

    <Button
        android:id="@+id/btn_cancel_noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:paddingStart="@dimen/padding_btn_30dp"
        android:paddingTop="8dp"
        android:paddingEnd="@dimen/padding_btn_30dp"
        android:paddingBottom="8dp"
        android:text="@string/txt_cancel_alert"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_alert_time" />

    <Button
        android:id="@+id/btn_view_detail_alert"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_16"
        android:focusable="false"
        android:text="@string/txt_view_detail"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/black"
        android:indeterminateTintMode="src_atop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

<!--<TextView-->
<!--android:id="@+id/label_alert_location"-->
<!--android:layout_width="0dp"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginTop="@dimen/margin_16"-->
<!--android:lineSpacingExtra="5sp"-->
<!--android:text="@string/txt_alert_address"-->
<!--android:textSize="@dimen/text_size_lg"-->
<!--android:textStyle="bold"-->
<!--app:layout_constraintEnd_toEndOf="@+id/label_patient_name"-->
<!--app:layout_constraintStart_toStartOf="@+id/label_patient_name"-->
<!--app:layout_constraintTop_toBottomOf="@+id/text_alert_name" />-->

<!--<TextView-->
<!--android:id="@+id/text_alert_location"-->
<!--android:layout_width="0dp"-->
<!--android:layout_height="wrap_content"-->
<!--android:lineSpacingExtra="5sp"-->
<!--android:text="@string/txt_alert_address"-->
<!--android:textSize="@dimen/text_size_lg"-->
<!--app:layout_constraintEnd_toEndOf="@+id/text_alert_name"-->
<!--app:layout_constraintStart_toStartOf="@+id/text_alert_name"-->
<!--app:layout_constraintTop_toTopOf="@+id/label_alert_location" />-->