<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/login_img_size"
            android:layout_height="@dimen/login_img_size"
            android:layout_marginTop="@dimen/margin_24"
            android:contentDescription="@string/desc_login_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fall_detection_1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_mobile_username"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_48"
            android:layout_marginEnd="32dp"
            android:hint="@string/txt_login_mobile_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_require_validation"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_mobile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/stroke"
                android:textSize="@dimen/text_size_14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:hint="@string/txt_password"
            app:layout_constraintEnd_toEndOf="@+id/text_input_mobile_username"
            app:layout_constraintStart_toStartOf="@+id/text_input_mobile_username"
            app:layout_constraintTop_toBottomOf="@+id/text_input_mobile_username"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="@color/stroke"
                android:textSize="@dimen/text_size_14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:paddingLeft="@dimen/padding_btn_30dp"
            android:paddingRight="@dimen/padding_btn_30dp"
            android:id="@+id/btn_forget_password"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/txt_forget_password_ask"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="@+id/text_input_password"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:backgroundTint="@color/primary_color"
            android:text="@string/txt_sign_in"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toEndOf="@+id/text_input_password"
            app:layout_constraintStart_toStartOf="@+id/text_input_password"
            app:layout_constraintTop_toBottomOf="@+id/btn_forget_password"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_dont_have_an_account"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

        <Button

            android:id="@+id/btn_sign_up"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/txt_sign_up_here"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/label_require_validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name_upper_case"
            android:textColor="@color/primary_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>